GNOME Bugzilla – Bug 751834
GbViewGrid/GbViewStack: fix moving views
Last modified: 2015-07-03 06:53:21 UTC
We should not re-create views when moving them. Now, view state is preserved ( scroll position, cursor position, split state etc... )
Created attachment 306615 [details] [review] GbViewGrid/GbViewStack: fix moving views We should not re-create views when moving them. Now, view state is preserved ( scroll position, cursor position, split state etc... )
Review of attachment 306615 [details] [review]: Just a few small things to fix ::: src/views/gb-view-grid.c @@ -292,1 +293,1 @@ gb_view_stack_remove (stack, view); Removing the item could cause the widget to get destroyed. So we need to ref/unref around the remove/add sequence. @@ -307,1 +310,1 @@ gb_view_stack_remove (stack, view); Same here. ::: src/views/gb-view-grid.h @@ -24,2 +24,3 @@ #include "gb-document.h" #include "gb-view-stack.h" +#include "gb-view-stack-private.h" -private.h should only be included from .c files and other -private.h files.
Created attachment 306667 [details] [review] GbViewGrid/GbViewStack: fix moving views