GbViewGrid/GbViewStack: fix moving views

We should not re-create views when moving them.
Now, view state is preserved ( scroll position, cursor position,
split state etc... )

https://bugzilla.gnome.org/show_bug.cgi?id=751834